[metadata]
name = nvx
version = 0.1.2
author = Baptiste Parsy
author_email = parsybaptiste@gmail.com
description = Simple script running nvidia-settings (with anti-tearing) based on your configured layout
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/titarch/nvx
project_urls =
    repository = https://github.com/titarch/nvx
classifiers =
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3
  Topic :: Multimedia :: Video :: Display
  Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nvx = nvx.main:main
